# ent/schema/node_version.go
@@ -67,7 +67,6 @@ const (
 	NodeVersionStatusDeleted NodeVersionStatus = "deleted"
 	NodeVersionStatusBanned  NodeVersionStatus = "banned"
 	NodeVersionStatusPending NodeVersionStatus = "pending"
-	NodeVersionStatusFlagged NodeVersionStatus = "flagged"
 )
 
 func (NodeVersionStatus) Values() (types []string) {
@@ -76,6 +75,5 @@ func (NodeVersionStatus) Values() (types []string) {
 		string(NodeVersionStatusBanned),
 		string(NodeVersionStatusDeleted),
 		string(NodeVersionStatusPending),
-		string(NodeVersionStatusFlagged),
 	}
 }
