# server/middleware/authentication/firebase_auth.go
@@ -21,7 +21,6 @@ func FirebaseAuthMiddleware(entClient *ent.Client) echo.MiddlewareFunc {
 	// Handlers in here should bypass this middleware.
 	var allowlist = map[*regexp.Regexp][]string{
 		regexp.MustCompile(`^/openapi$`):                               {"GET"},
-		regexp.MustCompile(`^/security-scan$`):                         {"GET"},
 		regexp.MustCompile(`^/users/sessions$`):                        {"DELETE"},
 		regexp.MustCompile(`^/vm$`):                                    {"ANY"},
 		regexp.MustCompile(`^/health$`):                                {"GET"},
@@ -32,7 +31,6 @@ func FirebaseAuthMiddleware(entClient *ent.Client) echo.MiddlewareFunc {
 		regexp.MustCompile(`^/publishers/[^/]+/nodes$`):                {"GET"},
 		regexp.MustCompile(`^/publishers/[^/]+$`):                      {"GET"},
 		regexp.MustCompile(`^/nodes$`):                                 {"GET"},
-		regexp.MustCompile(`^/versions$`):                              {"GET"},
 		regexp.MustCompile(`^/nodes/[^/]+$`):                           {"GET"},
 		regexp.MustCompile(`^/nodes/[^/]+/versions$`):                  {"GET"},
 		regexp.MustCompile(`^/nodes/[^/]+/install$`):                   {"GET"},
